Implementa o Publish da mensageria